--- a/index.html
+++ b/index.html
@@ -337,5 +337,98 @@
     <p>&copy; 2025 Moje investiční portfolio</p>
   </footer>
 </body>
+    <html lang="cs">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Investiční Portfolio - Osobní Finance</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>Moje investiční portfolio</h1>
+    <nav>
+      <ul>
+        <li><a href="#akcie">Akcie</a></li>
+        <li><a href="#dividendy">Dividendy</a></li>
+        <li><a href="#technologie">Technologie</a></li>
+        <li><a href="#osobni-finance">Osobní finance</a></li>
+        <li><a href="#kontakt">Kontakt</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="osobni-finance">
+      <h2>Osobní finance</h2>
+      <p>V této sekci spravuji své osobní finance včetně rozpočtování, sledování výdajů a plánování finančních cílů.</p>
+
+      <h3>Měsíční rozpočet</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>Kategorie</th>
+            <th>Plánovaná částka (CZK)</th>
+            <th>Skutečná částka (CZK)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>Bývání (hypotéka)</td><td>28 400</td><td>28 400</td></tr>
+          <tr><td>Potraviny</td><td>10 000</td><td>9 750</td></tr>
+          <tr><td>Doprava</td><td>4 000</td><td>3 800</td></tr>
+          <tr><td>Služby a energie</td><td>5 000</td><td>4 750</td></tr>
+          <tr><td>Volný čas</td><td>3 000</td><td>2 950</td></tr>
+          <tr><td>Děti</td><td>2 500</td><td>2 700</td></tr>
+          <tr><td>Spoření a investice</td><td>5 000</td><td>5 500</td></tr>
+        </tbody>
+      </table>
+
+      <h3>Vývoj čistého jmění</h3>
+      <p>Pravidelně sleduji čisté jmění, abych měl přehled o tom, jak rostu finančně:</p>
+      <ul>
+        <li>Leden 2025: 120 000 CZK</li>
+        <li>Únor 2025: 135 000 CZK</li>
+        <li>Březen 2025: 145 000 CZK</li>
+        <li>Duben 2025: 160 000 CZK</li>
+      </ul>
+
+      <h3>Finanční cíle</h3>
+      <ul>
+        <li>Spořit 100 000 CZK jako rezervu do konce roku 2025</li>
+        <li>Navýšit měsíční příjem o 20 % díky vedlejším projektům</li>
+        <li>Dosáhnout dividendového příjmu 2 000 CZK měsíčně</li>
+        <li>Investovat do rekonstrukce garáže a zahájit podnikání s květinami</li>
+      </ul>
+
+      <h3>Finanční nástroje</h3>
+      <ul>
+        <li>Tabulkový přehled v Google Sheets</li>
+        <li>Mobilní aplikace na sledování rozpočtu (např. Wallet, Spendee)</li>
+        <li>Trackování akcií a kryptoměn pomocí vlastní webové aplikace</li>
+        <li>Přehled výnosů a výdajů z krevní plazmy</li>
+      </ul>
+    </section>
+
+    <section id="kontakt">
+      <h2>Kontakt</h2>
+      <form>
+        <label for="name">Jméno:</label>
+        <input type="text" id="name" name="name" required />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="message">Zpráva:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <button type="submit">Odeslat</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Moje investiční portfolio</p>
+  </footer>
+</body>
 
 </html>
