--- a/index.html
+++ b/index.html
@@ -90,12 +90,31 @@
     <button onclick="showSection('goals')">Cíle</button>
   </nav>
 
-  <section id="overview" class="section active">
-    <div class="card">
-      <h2>Přehled</h2>
-      <p>Zde se zobrazí celkový přehled tvých financí, součet aktiv a pasiv, měsíční rozdíl příjmů a výdajů apod.</p>
+  <section id="prehlad" class="p-4">
+  <div class="max-w-4xl mx-auto bg-white dark:bg-gray-900 shadow-md rounded-2xl p-6">
+    <h2 class="text-2xl font-bold mb-4">Přehled akcií</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 text-sm">
+      <div>
+        <span class="font-medium">Název:</span> AMD
+      </div>
+      <div>
+        <span class="font-medium">Počet akcií:</span> 10
+      </div>
+      <div>
+        <span class="font-medium">Nákupní cena:</span> $86.16
+      </div>
+      <div>
+        <span class="font-medium">Datum nákupu:</span> 16. 4. 2025
+      </div>
+      <div>
+        <span class="font-medium">Investovaná částka:</span> $861.60
+      </div>
+      <div>
+        <span class="font-medium">Investovaná částka v CZK:</span> 20 678 Kč
+      </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <section id="portfolio" class="section">
     <div class="card">
