--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
 
   <section id="dashboard" class="container active">
     <!-- Původní dashboard sekce -->
+    <h2>Dashboard</h2>
+<table id="portfolioTable">
+  <thead>
+    <tr>
+      <th>Ticker</th>
+      <th>Počet</th>
+      <th>Nákupní cena ($)</th>
+      <th>Aktuální cena ($)</th>
+      <th>Zisk/Ztráta ($)</th>
+      <th>Zisk/Ztráta (%)</th>
+      <th>Váha (%)</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
     <label for="currency">Měna:</label>
     <select id="currency">
       <option value="USD">USD</option>
@@ -171,7 +186,7 @@
         </tr>
       </tbody>
     </table>
-
+    
     <canvas id="dividendChart" style="margin-top:2rem;"></canvas>
   </section>
 
@@ -222,6 +237,34 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Papa Parse pro CSV -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+<script>
+  async function callOpenAI(promptText) {
+    const apiKey = "TVŮJ_API_KLÍČ"; // ← sem vlož svůj klíč
+
+    const response = await fetch("https://api.openai.com/v1/chat/completions", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        "Authorization": `Bearer ${apiKey}`
+      },
+      body: JSON.stringify({
+        model: "gpt-4", // nebo "gpt-3.5-turbo"
+        messages: [{ role: "user", content: promptText }],
+        temperature: 0.7
+      })
+    });
+
+    const data = await response.json();
+    return data.choices[0].message.content;
+  }
+
+  // Příklad použití: zavolá se po kliknutí na tlačítko
+  async function onAskButtonClick() {
+    const userPrompt = document.getElementById("promptInput").value;
+    const responseText = await callOpenAI(userPrompt);
+    document.getElementById("responseOutput").innerText = responseText;
+  }
+</script>
 
   <script>
     function showSection(id) {
@@ -608,6 +651,61 @@ renderTransactions();
       }
     });
   </script>
+<script>
+  const API_KEY = 'TVŮJ_API_KLÍČ';
 
+  const portfolio = [
+    { symbol: 'AAPL', shares: 10, avgCost: 120 },
+    { symbol: 'MSFT', shares: 5, avgCost: 250 },
+    { symbol: 'AMD', shares: 8, avgCost: 85 }
+  ];
+
+  async function getStockPrice(symbol) {
+    const url = `https://www.alphavantage.co/query?function=GLOBAL_QUOTE&symbol=${symbol}&apikey=${API_KEY}`;
+    const res = await fetch(url);
+    const data = await res.json();
+    return parseFloat(data['Global Quote']?.['05. price'] ?? 0);
+  }
+
+  async function updatePortfolio() {
+    let totalValue = 0;
+
+    for (let stock of portfolio) {
+      stock.currentPrice = await getStockPrice(stock.symbol);
+      stock.currentValue = stock.currentPrice * stock.shares;
+      stock.costBasis = stock.avgCost * stock.shares;
+      stock.pnl = stock.currentValue - stock.costBasis;
+      stock.pnlPercent = (stock.pnl / stock.costBasis) * 100;
+      totalValue += stock.currentValue;
+    }
+
+    for (let stock of portfolio) {
+      stock.weight = (stock.currentValue / totalValue) * 100;
+    }
+
+    renderPortfolioTable();
+  }
+
+  function renderPortfolioTable() {
+    const tbody = document.querySelector('#portfolioTable tbody');
+    tbody.innerHTML = '';
+    portfolio.forEach(stock => {
+      const row = document.createElement('tr');
+      row.innerHTML = `
+        <td>${stock.symbol}</td>
+        <td>${stock.shares}</td>
+        <td>${stock.avgCost.toFixed(2)}</td>
+        <td>${stock.currentPrice?.toFixed(2) ?? 'Načítám'}</td>
+        <td style="color: ${stock.pnl >= 0 ? 'lightgreen' : 'salmon'}">${stock.pnl.toFixed(2)}</td>
+        <td style="color: ${stock.pnlPercent >= 0 ? 'lightgreen' : 'salmon'}">${stock.pnlPercent.toFixed(2)}%</td>
+        <td>${stock.weight.toFixed(2)}%</td>
+      `;
+      tbody.appendChild(row);
+    });
+  }
+
+  updatePortfolio();
+</script>
+</body>
 </body>
 </html>
