--- a/index.html
+++ b/index.html
@@ -85,27 +85,33 @@
   </nav>
 
   <section id="dashboard" class="container active">
-    <!-- Původní dashboard sekce -->
-    <h2>Dashboard</h2>
-<table id="portfolioTable">
-  <thead>
-    <tr>
-      <th>Ticker</th>
-      <th>Počet</th>
-      <th>Nákupní cena ($)</th>
-      <th>Aktuální cena ($)</th>
-      <th>Zisk/Ztráta ($)</th>
-      <th>Zisk/Ztráta (%)</th>
-      <th>Váha (%)</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
-</table>
-    <label for="currency">Měna:</label>
-    <select id="currency">
-      <option value="USD">USD</option>
-      <option value="CZK">CZK</option>
-    </select>
+  <h2>Dashboard</h2>
+
+  <table id="portfolioTable">
+    <thead>
+      <tr>
+        <th>Ticker</th>
+        <th>Počet</th>
+        <th>Nákupní cena ($)</th>
+        <th>Aktuální cena ($)</th>
+        <th>Zisk/Ztráta ($)</th>
+        <th>Zisk/Ztráta (%)</th>
+        <th>Váha (%)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Data se načtou pomocí JavaScriptu -->
+    </tbody>
+  </table>
+
+  <label for="currency">Měna:</label>
+  <select id="currency">
+    <option value="USD">USD</option>
+    <option value="CZK">CZK</option>
+  </select>
+
+  <input type="text" id="search" placeholder="Hledat akcie..." style="float:right;"/>
+</section>
 
     <input type="text" id="search" placeholder="Hledat akcie..." style="float:right;"/>
 
