--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div id="portfolio"></div>
 
   <script>
-    const API_KEY = "API_KEY"; // nahraď vlastním klíčem
+    const API_KEY = "d20gpt1r01qrk6cku2mgd20gpt1r01qrk6cku2n0"; // nahraď vlastním klíčem
     const portfolioData = [
       { ticker: "AAPL", amount: 10, buyPrice: 150, currency: "USD" },
       { ticker: "SAP", amount: 5, buyPrice: 120, currency: "EUR" },
